--- a/www/templates/playlists.html
+++ b/www/templates/playlists.html
@@ -1,8 +1,8 @@
-<ion-view view-title="Playlists">
+<ion-view view-title="London Sites">
   <ion-content>
     <ion-list>
-      <ion-item ng-repeat="playlist in playlists" href="#/app/playlists/{{playlist.id}}">
-        {{playlist.title}}
+      <ion-item ng-repeat="site in sites" href="#/app/playlists/{{playlist.id}}">
+        {{site.name}}
       </ion-item>
     </ion-list>
   </ion-content>
