--- a/www/templates/playlists.html
+++ b/www/templates/playlists.html
@@ -1,4 +1,10 @@
 <ion-view view-title="London Sites">
+
+  <ion-nav-buttons side="right">
+    <button class="button button-clear icon ion-more" ng-click="openPopover($event)"></button>
+  </ion-nav-buttons>
+
+
   <ion-content>
     <ion-list>
       <ion-item ng-repeat="site in sites" href="#/app/playlists/{{playlist.id}}">
